<resources>
    <string name="app_name">CSDN</string>

    <string name="base_url">http://m.blog.csdn.net</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="article_title">这是标题</string>
    <string name="article_author">这是作者</string>
    <string name="article_readCount">18 阅读</string>
    <string name="article_readTime">23 分钟前</string>
    <string name="article_divide">|</string>
    <string name="not_login">未登录</string>
    <string name="loading">加载更多……</string>
</resources>
